chandeliers-lus/tests/pass/dead_code/hidden-main.rs
mod hidden {
    chandeliers_lus::decl! {
        node foo() returns ();
        let tel
    }
}

fn unused() {}

fn main() {}
