chandeliers-lus/tests/fail/ui/syn/unclosed.rs
chandeliers_lus::decl! {
    node foo() returns ();
    let
        x = 9;
        y = 2;
}

fn main() {}
